# markdownish

./: .gitignore  Cargo.toml  Makefile  PRD.md  Package.swift
.github/workflows/: pages.yml  release.yml
assets/: MarkdownViewer.icns
core/: Cargo.toml  cbindgen.toml
core/src/: config.rs  ffi.rs  file_loader.rs  json_types.rs  lib.rs  parser.rs
landing/: CNAME  index.html
scripts/: build_app.sh  build_core.sh  gen_icon.swift  make_dmg.sh
src/: app.rs  config.rs  file_browser.rs  file_loader.rs  main.rs  parser.rs  renderer.rs
src/ui/: mod.rs  settings_panel.rs  toolbar.rs
viewer/App/: AppState.swift  MarkdownViewerApp.swift
viewer/Bridge/: MarkdownAST.swift  MarkdownBridge.swift  MarkdownCore.h  MarkdownViewer-Bridging-Header.h  module.modulemap
viewer/Renderer/: DocumentAttributedStringBuilder.swift  DocumentRenderer.swift  DocumentView.swift  LayoutEngine.swift  Shaders.metal  SyntaxHighlighter.swift
viewer/Views/: ContentView.swift  FileBrowserView.swift  SettingsView.swift
