[package]
name = "markdown-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markdown-viewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
rfd = "0.15"
open = "5"
thiserror = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
