[package]
name = "markdown-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "markdown_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
